--- a/.gitmodules
+++ b/.gitmodules
@@ -1,3 +1,3 @@
-[submodule "avrfreertos"]
-	path = avrfreertos
-	url = https://github.com/feilipu/avrfreertos.git
+[submodule "freertos"]
+	path = freertos
+	url = https://github.com/feilipu/miniAVRfreeRTOS.git
