Move freertos submodule

--- a/.gitmodules
+++ b/.gitmodules
@@ -4,3 +4,6 @@
 [submodule "libs/xXx"]
 	path = libs/xXx
 	url = https://github.com/XMrVertigoX/xXx_CPP.git
+[submodule "libs/FreeRTOS"]
+	path = libs/FreeRTOS
+	url = https://github.com/feilipu/miniAVRfreeRTOS.git
